objects/Patient__c.object
<CustomObject>
    <fields>
        <fullName>Area__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Area</label>
        <referenceTo>Area__c</referenceTo>
        <relationshipLabel>Patients</relationshipLabel>
        <relationshipName>Patients</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Cure_Date__c</fullName>
        <label>Cure Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fatal_Date__c</fullName>
        <label>Fatal Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Number_of_Days_to_Cure__c</fullName>
        <formula>Cure_Date__c - DateValue(CreatedDate)</formula>
        <label>Number of Days to Cure</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Days_to_Fatal__c</fullName>
        <formula>Fatal_Date__c - DateValue(CreatedDate)</formula>
        <label>Number of Days to Fatal</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Stage__c</fullName>
        <label>Stage</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Mild</fullName>
                </value>
                <value>
                    <fullName>Critical</fullName>
                </value>
                <value>
                    <fullName>Cured</fullName>
                </value>
                <value>
                    <fullName>Fatal</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Patient</label>
    <nameField>
        <label>Patient Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Patients</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>